update file structure - css link not working

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'layout.html' %}
 
 {% block head %}
 
 {% endblock %}
 
 {% block body %}
-<h1>Template</h1>
+<h1>hello</h1>
 {% endblock %}
