--- a/activmatesApp/templates/layout.html
+++ b/activmatesApp/templates/layout.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     
     {% if title %}
     <title>ActivMates - {{ title }}</title>
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+         <nav id="navbar"class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">ActivMates</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,11 +36,30 @@
                 </ul>
               </div>
             </div>
-          </nav>
-       </header>
+          </nav> 
+    </header>
     
-    <div class="container">
-        {% block body %}{% endblock %}
+    <div class="container-fluid">
+      
+      <div class="row">
+        <div class="col">
+          {% with messages = get_flashed_messages(with_categories=true)%}
+            {% if messages %}
+              {% for category, message in messages %}
+              <div class="alert alert-{{ category }} ">
+                {{ message }}
+              </div>
+              {% endfor%}
+            {% endif %}
+         {% endwith %}
+        </div>
+        <div class="col">
+        </div>
+      </div>
     </div>
+  {% block body %}{% endblock %}
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
 </body>
 </html>
