--- a/activmatesApp/templates/home.html
+++ b/activmatesApp/templates/home.html
@@ -3,5 +3,26 @@
 
 
 {% block body %}
-<h1>activMates home</h1>
+<div class="row">
+    <div class="col-md-8 content-section">
+        <h1>ActivMates - time to find an exercise buddy!</h1>
+        <div class="ms-4 mb-4">
+            <h4>New to a city, and want to meet people in a different way?</h4>
+            <h4>Don't feel safe running alone at night?</h4>
+            <h4>Want to learn a new sport?</h4>
+            <h4>Need someone else to motivate you?</h4>
+        </div>
+        <div class="ms-3">
+					<p class="body">Sign up today to connect with someone in your area</p>
+					<button id="sign-up" class="primary">
+							Sign Up
+					</button>
+					<button id="login" class="secondary">Login</button>
+			</div>
+    </div>	
+		<div class="col-md-4">
+
+		</div>
+</div>
+
 {% endblock %}
