--- a/activmatesApp/templates/landing-page.html
+++ b/activmatesApp/templates/landing-page.html
@@ -7,6 +7,6 @@
 {% block body %}
 <h1>activMates Landing</h1>
 
-<button>login</button>
+<button></button>
 <button>register</button>
 {% endblock %}
