--- a/activmatesApp/templates/layout.html
+++ b/activmatesApp/templates/layout.html
@@ -32,7 +32,7 @@
                       <a class="nav-link" href="{{ url_for('main_search') }}">Search</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('profile') }}">Profile</a>
+                      <a class="nav-link" href="{{ url_for('edit_profile') }}">Profile</a>
                     </li>
                       <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
