--- a/activmatesApp/templates/edit-profile.html
+++ b/activmatesApp/templates/edit-profile.html
@@ -5,27 +5,25 @@
 {% block body %}
 <h1>profile page</h1>
     <div class="row content-section">
-        <div id="user-card">
-            <h4>{{ current_user.username }}</h4>
-            <p> {{ current_user.first_name }} </p>
-            <p> {{ current_user.last_name }} </p>
-            <p> {{ current_user.street_address }} </p>
-            <p> {{ current_user.city }} </p>
-            <p> {{ current_user.postcode }} </p>
-            <p> {{ current_user.phone_number }} </p>
-            <p> {{ current_user.twitter }} </p>
-            <p> {{ current_user.facebook }} </p>
-
-            <img src=" {{ image_file }} " alt="">
-        </div>
+     
 	<div class="col mt-3">        
-		<form action="" method="POST">
+		<form action="" enctype="multipart/form-data" method="POST">
 			{{ editProfileForm.hidden_tag() }}
 			<fieldset class="form-control d-grid gap-3">
 					<legend>
 							Edit Profile!
 					</legend>
-					
+					<div class="form-group first-name">
+							{{ editProfileForm.picture.label(class="form-control-label") }}
+								{{ editProfileForm.picture(class="") }}
+								<div class="invalid-feedback">
+									{% if editProfileForm.picture.errors %}
+									{% for error in editProfileForm.picture.errors %}
+									<span>{{ error }}</span>
+												{% endfor %}
+								</div>
+								{% endif %}
+					</div>
 					<div class="form-group first-name">
 							{% if editProfileForm.first_name.errors %}
 							{{ editProfileForm.first_name(class="form-control-label is-invalid", placeholder="First Name") }}
