--- a/activmatesApp/templates/edit-profile.html
+++ b/activmatesApp/templates/edit-profile.html
@@ -1,10 +1,16 @@
 {% extends 'layout.html' %}
-
+{% block head %}
+<script src="{{ url_for('static', filename='javascript/map-address-field.js') }}"></script>
+<script async
+        src="https://maps.googleapis.com/maps/api/js?key={{map_key}}&libraries=places&callback=initAutocomplete">
+</script>
+{% endblock %}
 
 
 {% block body %}
 <h1>profile page</h1>
     <div class="row content-section">
+
      
 	<div class="col mt-3">        
 		<form action="" enctype="multipart/form-data" method="POST">
@@ -50,44 +56,15 @@
 
 							{% endif %}
 					</div>
-                    <div class="form-group address">
-                        {% if editProfileForm.street_address.errors %}
-                        {{ editProfileForm.street_address(class="form-control-label is-invalid", placeholder="Street Address") }}
-                        <div class="invalid-feedback">
-                                {% for error in editProfileForm.street_address.errors %}
-                                <span>{{ error }}</span>
-                                {% endfor %}
-                        </div>
-                        {% else %}
-                        {{ editProfileForm.street_address(class="form-control-label", placeholder="Street Address") }}
-
-                        {% endif %}
-                </div>
+                    <div id="locationField">
+                        <input id="autocomplete" placeholder="Enter your address"  type="text" class="form-control">
+                      </div>
+                        <p id="details"></p>
                 <div class="form-group city">
-                    {% if editProfileForm.city.errors %}
-                    {{ editProfileForm.city(class="form-control-label is-invalid", placeholder="City") }}
-                    <div class="invalid-feedback">
-                            {% for error in editProfileForm.city.errors %}
-                            <span>{{ error }}</span>
-                            {% endfor %}
-                    </div>
-                    {% else %}
-                    {{ editProfileForm.city(class="form-control-label", placeholder="City") }}
-
-                    {% endif %}
+                   
                 </div>
                 <div class="form-group postcode">
-                    {% if editProfileForm.postcode.errors %}
-                    {{ editProfileForm.postcode(class="form-control-label is-invalid", placeholder="Postcode") }}
-                    <div class="invalid-feedback">
-                            {% for error in editProfileForm.postcode.errors %}
-                            <span>{{ error }}</span>
-                            {% endfor %}
-                    </div>
-                    {% else %}
-                    {{ editProfileForm.postcode(class="form-control-label", placeholder="Postcode") }}
-
-                    {% endif %}
+                    
                 </div>
                 <div class="form-group phone-number">
                     {% if editProfileForm.phone_number.errors %}
@@ -135,4 +112,5 @@
         </form>
     </div>
 </div>    
+
 {% endblock %}
