--- a/activmatesApp/templates/layout.html
+++ b/activmatesApp/templates/layout.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Titillium+Web:wght@300;400;700&display=swap" rel="stylesheet"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <script src="{{ url_for('static', filename='javascript/map.js') }}"></script>
+{% block head %}
+{% endblock %}
     {% if title %}
     <title>ActivMates - {{ title }}</title>
     {% else %}
@@ -71,11 +72,10 @@
         <div class="col">
         </div>
       </div>
-  {% block body %}{% endblock %}
     </div>
-    <script async
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMap">
-</script>
+  {% block body %}{% endblock %}
+   
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </body>
